edit api register
