# controller/user_services/model/register.model.go
@@ -4,5 +4,6 @@ type Register struct {
 	Email           string `json:"email"`
 	UserName        string `json:"user_name"`
 	Password        string `json:"password"`
-	ConfirmPassword string `json:"confirm-password"`
+	ConfirmPassword string `json:"confirm_password"`
+	FaceImg         string `json:"face_image"`
 }
