# controller/user_services/repository/login.img.go
@@ -1,0 +1,7 @@
+package userrepository
+
+import usermodel "github.com/PhuPhuoc/koi-story-api/controller/user_services/model"
+
+func (store *userStore) LoginFaceImage(req usermodel.UserLoginImage) (usermodel.User, error) {
+	return usermodel.User{}, nil
+}
